--- a/agendamento.html
+++ b/agendamento.html
@@ -1,52 +1,90 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="css/agendamento.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="css/agendamento.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="body">
       <aside>
-        <h2>Bem vindo(a)</h1>
+        <h2>Bem vindo(a)</h2>
         <ul>
-            <li><a href="home.html">Início <i class="bi bi-house"></i></a></li>
-            <li><a href="agendamento.html">Agendamento <i class="bi bi-calendar"></i></a></li>
-            <li><a href="prontuario.html">Prontuário <i class="bi bi-file-earmark"></i></a></li>
-            <div class="consult-container">
-            <li><a href="consulta.html">Consultas <i class="bi bi-list"></i></a></li>
-            </div>
+          <li>
+            <a href="home.html">Início <i class="bi bi-house"></i></a>
+          </li>
+          <li>
+            <a href="agendamento.html"
+              >Agendamento <i class="bi bi-calendar"></i
+            ></a>
+          </li>
+          <li>
+            <a href="prontuario.html"
+              >Prontuário <i class="bi bi-file-earmark"></i
+            ></a>
+          </li>
+          <div class="consult-container">
+            <li>
+              <a href="consulta.html">Consultas <i class="bi bi-list"></i></a>
+            </li>
+          </div>
         </ul>
 
-        <p class="exit"><a href="">Sair <i class="bi bi-box-arrow-right"></i></a></p>        
-    </aside>
-    
-    <form>
-    <label>Nome Completo</label>
-    <input type="text" />
+        <p class="exit">
+          <a href="">Sair <i class="bi bi-box-arrow-right"></i></a>
+        </p>
+      </aside>
 
-    <label for="">Gênero</label>
-    <select name="" id="">
-        <option value="">Masculino</option>
-        <option value="">Feminino</option>
-        <option value="">Outro</option>
+      <form>
+        <h1 class="consult">Agendamento de Consulta</h1>
+        <div class="full-line">
+          <label for="nome">Nome Completo</label>
+          <input type="text" id="nome" placeholder="John Doe" required />
+        </div>
 
+        <div class="full-line">
+          <label for="email">E-mail</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="johndoe@email.com"
+            required
+          />
+        </div>
 
-    <label for="">Telefone</label>
-    <input type="tel" name="" id="">
+        <div class="full-line">
+          <label for="telefone">Telefone</label>
+          <input
+            type="tel"
+            id="telefone"
+            placeholder="(99) 99999-9999"
+            required
+          />
+        </div>
 
-    <label for="">E-mail</label>
-    <input type="email">
+        <div>
+          <label for="genero">Gênero</label>
+          <select id="genero">
+            <option value="">Masculino</option>
+            <option value="">Feminino</option>
+            <option value="">Outro</option>
+          </select>
+        </div>
 
-    <label for="">Data de Agendamento</label>
-    <input type="date" name="" id="">
-    <button>Agendar</button>
-   </form> 
+        <div>
+          <label for="data">Data de Agendamento</label>
+          <input type="date" id="data" required />
+        </div>
 
-</div>
-</body>
+        <button class="agendar">Agendar</button>
+      </form>
+    </div>
+  </body>
 </html>
